--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,4 +63,159 @@ header nav ul li {
         background-color: rgb(46, 43, 43);
     }
     
+    .container {
+        margin: 100px auto;
+        padding-right: 100px;
+        display: flex;
+        flex-wrap: wrap;
+    }
     
+    /* about-me Section */
+
+    .container h2 {
+        color: rgb(206, 220, 220);
+        font-size: 38px;
+        font-family: Georgia, 'Times New Roman', Times, serif   ;
+        
+    }
+
+    .aboutme p {
+        color: antiquewhite;
+        width: 65%;
+        line-height: 1.5;
+        margin-bottom: 20px;
+        font-size: 20px;
+        padding-top: 20%;
+    }
+
+
+    #me_img img {
+    max-width: 200px;
+    height: auto;
+    float: left;
+    border-radius: 40%;
+    margin: 20px 20px 0 0;
+    flex: 2 0 0;
+    filter: saturate(1); }
+
+    .container h2 {
+        color: rgb(206, 220, 220);
+        font-size: 36px;
+        font-family:  Georgia, 'Times New Roman', Times, serif;
+        font-weight: lighter;
+        padding-top: 30px;
+        padding-right: 60px;
+        flex: 1 30%;
+    }
+
+    
+     .aboutme {
+    flex: 2 70%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    padding-left: 60px;
+    border-left: 1px solid var(--cyan);
+     }
+
+     #me-img {
+    margin-left: 25px;
+     }  
+
+     .img-container {
+    display: flex;
+    flex: 1 70%;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    border-left: 1px solid var(--cyan);
+    padding-left: 60px;
+     }
+
+     .img-container .work {
+    flex: 1 100%;
+    position: relative;
+    display: inline-block;
+    padding: 15px;
+    margin-bottom: 10px;
+     }
+
+     .work img {
+    max-width: 100%;
+    display: block;
+    opacity: 1;
+    transition: opacity 1s ease-in-out 0.2s;
+     }
+
+
+     .work a {
+    flex: 0 0 50%;
+    max-width: 100%;
+    max-height: 100%;
+    display: flex;
+     }
+
+     .img-container .work {
+    flex: 1 50%;
+    position: relative;
+    display: inline-block;
+    padding: 15px;
+    margin-bottom: 10px;
+     }
+
+     .work img {
+    max-width: 100%;
+    display: block;
+    opacity: 0.5;
+    transition: opacity 1s ease-in-out 0.2s;
+    width: 600px; height: 250px;
+     }
+
+     .work a {
+    flex: 0 0 50%;
+    max-width: 100%;
+    max-height: 100%;
+    display: flex;
+     }
+
+
+     .contactme {
+        flex: 2 70%;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: flex-start;
+        padding-left: 60px;
+    }
+    
+    .contactme p {
+        margin: 0 auto;
+        line-height: 1.7;
+        width: 100%;
+        font-size: 20px;
+        text-align: left;
+    }
+    
+    .contactme img {
+        width: 30px;
+        height: 30px;
+        display: inline;
+        margin: 3px 20px 7px 0;
+    }
+    
+    .contactme a {
+
+        text-decoration: none;
+        color: antiquewhite;
+    }
+
+    .contact-me h2 {
+        color: rgb(206, 220, 220);
+        font-size: 36px;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-weight: lighter;
+        text-align: right;
+        padding-top: 30px;
+        flex: 1 30%;
+        padding-right: 60px;
+    }
+
+     
